# apparition

./: .gitignore  CMakeLists.txt  README.md
include/apparition/: math.hh  renderer.hh  shader.hh
source/: CMakeLists.txt
source/apparition/: CMakeLists.txt  math.cc  renderer.cc
source/apparition_example/: CMakeLists.txt  main.cc
